# helmlab

./: .gitignore  CLAUDE.md  CRITICAL_ANALYSIS.md  HISTORY.md  README.md  baselines.csv  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
docs/: demo.html  index.html  tools.html
landing/: admin.html  blog.html  demo.html  docs.html  index.html  llms.txt  palette.html  robots.txt  sitemap.xml  tools.html
landing/api/: server.js
landing/css/: components.css  style.css
landing/js/: components.js  main.js
new-paper/: generate_figures.py  helmlab.tex
paper/: demo_tech.html  generate_figures.py  helmlab.tex
paper/v1/: helmlab-v1.tex
src/colorspace/: __init__.py  config.py  export.py  helmlab.py
src/colorspace/data/: combvd.py  dataset.py  he2022.py  macadam1974.py  munsell.py  preprocessing.py
src/colorspace/feedback/: collector.py  generator.py
src/colorspace/metrics/: benchmarks.py  delta_e.py  stress.py
src/colorspace/nn/: evaluate.py  inn.py  mlp.py  training.py
src/colorspace/spaces/: analytical.py  base.py  cam16ucs.py  ipt.py  jzczhz.py  oklch.py  registry.py  srgb.py
src/colorspace/utils/: conversions.py  gamut.py  io.py
src/helmlab/: __init__.py  export.py  helmlab.py
src/helmlab/data/: analytical_params_v19.json  combvd.py  dataset.py  gen_params.json  he2022.py  hung_berns.py  macadam1974.py  metric_params.json  munsell.py  preprocessing.py
src/helmlab/feedback/: collector.py  generator.py
src/helmlab/metrics/: benchmarks.py  delta_e.py
src/helmlab/nn/: evaluate.py  inn.py  losses.py  mlp.py  training.py
src/helmlab/spaces/: analytical.py  cam16ucs.py  gen.py  ipt.py  jzczhz.py  metric.py  oklch.py  registry.py  srgb.py
src/helmlab/utils/: conversions.py  gamut.py  io.py  srgb_convert.py  visualization.py
tests/: conftest.py  test_analytical.py  test_bidirectional.py  test_conversions.py  test_edge_cases.py  test_gen_space.py  test_helmlab.py  test_metrics.py  test_nn.py  test_spaces.py  test_stress.py
